# ncs-serial-modem-host-applications

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties  west.yml
.github/actions/west-init/: action.yml
.github/test/: tests.yml
.github/test/cloud/: nrf-cloud-device.sh  run.sh
.github/test/scripts/: load-test.sh  resolve-matrix.sh
.github/workflows/: build.yml  cloud-connect-test.yml  compliance.yml  fota-test.yml  markdown-link-checker.yml  sonarcloud.yml  test.yml
applications/91m1/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  sysbuild.conf
applications/91m1/boards/: nrf54l15_cpuapp_mcuboot_partitions.dtsi  nrf54l15_cpuapp_ns_partitions.dtsi  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.conf  nrf54l15dk_nrf54l15_cpuapp_ns.overlay
applications/91m1/doc/: README.md  application-behavior.md  hardware-setup.md  memfault.md  nrf-cloud-onboarding.md
applications/91m1/drivers/nrf91-sm/: CMakeLists.txt  Kconfig  nordic_nrf91sm.c
applications/91m1/drivers/nrf91-sm/dts/bindings/: nordic,nrf91-sm-v2.yaml
applications/91m1/drivers/nrf91-sm/zephyr/: module.yml
applications/91m1/src/: Kconfig.main  main.c  modem_reset.c
applications/91m1/src/modules/cloud/: Kconfig.cloud  cloud.c  cloud.h
applications/91m1/src/modules/fota/: Kconfig.fota  fota.c  fota.h
applications/91m1/src/modules/network/: network.c  network.h  network_shell.c
applications/91m1/sysbuild/mcuboot/: prj.conf
applications/91m1/sysbuild/mcuboot/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
applications/93m1/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  sample.yaml  sysbuild.conf
applications/93m1/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
applications/93m1/cmake/memfault-modem-shim/: nrf_modem_at.h
applications/93m1/src/: Kconfig.main  main.c
applications/93m1/src/modules/battery/: Kconfig.battery  battery.c
applications/93m1/src/modules/fota/: Kconfig.fota  fota.c
applications/93m1/src/modules/location/: Kconfig.location  location.c  location_shell.c
applications/93m1/src/modules/memfault/: Kconfig.memfault
applications/93m1/src/modules/modem_at/: Kconfig.modem_at
applications/93m1_at/: CMakeLists.txt  Kconfig  VERSION  prj.conf  sample.yaml  sysbuild.conf
applications/93m1_at/boards/: nrf93m1dk_nrf54l15_cpuapp_ns.conf  nrf93m1dk_nrf54l15_cpuapp_ns.overlay
applications/93m1_at/doc/: README.md
applications/93m1_at/src/: Kconfig.main  main.c
applications/93m1_at/src/modules/battery/: Kconfig.battery  battery.c  battery.h
applications/93m1_at/src/modules/cloud/: Kconfig.cloud  cloud.c  cloud.h
applications/93m1_at/src/modules/location/: Kconfig.location  location.c  location.h
applications/93m1_at/src/modules/modem_at/: Kconfig.modem_at  modem_at.c  modem_at.h  modem_at_shell.c
applications/93m1_at/src/modules/network/: Kconfig.network  network.c  network.h
applications/93m1_ppp/: CMakeLists.txt  Kconfig  sample.yaml
applications/93m1_ppp/boards/: nrf93m1dk_nrf54l15_cpuapp_ns.conf  nrf93m1dk_nrf54l15_cpuapp_ns.overlay  nrf93m1dk_partitions.dtsi
applications/93m1_ppp/doc/: README.md
applications/93m1_ppp/src/: main.c
applications/93m1_ppp/src/modules/battery/: battery.c  battery.h  lp803448_model.h
applications/93m1_ppp/src/modules/fota/: fota.c  fota_shell.c
applications/93m1_ppp/src/modules/location/: location.c  location.h  location_shell.c
applications/93m1_ppp/src/modules/memfault/: memfault.c
applications/93m1_ppp/src/modules/modem_at/: modem_at.c  modem_at.h  modem_at_shell.c
applications/93m1_ppp/src/modules/network/: Kconfig.network  network.c
applications/93m1_ppp/sysbuild/: mcuboot.overlay
lib/include/: app_common.h
tests/on_target/: requirements.txt
tests/on_target/ci/: __init__.py  catalog.py
tests/on_target/tests/: conftest.py  pytest.ini
tests/on_target/tests/test_cloud/: test_cloud_connect.py
tests/on_target/utils/: flash_tools.py  helpers.py  logger.py  nrf_cloud_device.py  nrf_cloud_provision.py  serial_port.py  uart.py
zephyr/: module.yml
